--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -201,4 +201,37 @@ body {
 <tr>
     <td>
         <a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي"></a>
-        <span class="product-description">غلاي شاي "كينود" درجة
+        <span class="product-description">غلاي شاي "كينود" درجة أولى (ضمان 5 سنوات)</span>
+    </td>
+    <td>
+        <a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي"></a>
+        <span class="product-description">غسالة "بووش" اتوماتيك باب امامي لون رمادي (ضمان 5 سنوات)</span>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض"></a>
+        <span class="product-description">غسالة "بووش" اتوماتيك باب امامي لون أبيض (ضمان 5 سنوات)</span>
+    </td>
+    <td>
+        <a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية"></a>
+        <span class="product-description">مكنسة كهربائية كلاسيكية "باناسونيك" (ضمان سنتين)</span>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية"></a>
+        <span class="product-description">مكنسة بشكل عصا طويلة وحديثة "فيليبس" مكنسة فرشاة قصيرة +</span>
+    </td>
+    <td>
+        <a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي"></a>
+        <span class="product-description">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى (ضمان 10 سنوات)</span>
+    </td>
+</tr>
+</table>
+
+<div class="buttons-container">
+    <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+</div>
+</body>
+</html>
