--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
 <head>
 <title>الملابس الجاهزة</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-/* تم تعديل Body لإضافة التوسيط */
-body {
-    text-align: center; 
-}
-
-/* تم تحديث Body في جزء الـ <style> ليكون متوافقًا مع العنصر body */
-/* Body هي تسمية CSS خاطئة، تم تصحيحها إلى body */
-/* تم دمج Body مع التوسيط أعلاه */
-
+Body
 .container {text-align: center;}
 H1 {font-size: 24px;
 Margin-bottom: 20px;}
 .buttons-container {
 Display: flex;
 Gap: 20px;
-/* التأكد من توسيط الأزرار أفقيًا */
-Justify-content: center;
-/* إضافة خاصية لضمان توسيط الحاوية نفسها داخل العنصر الأب */
-margin: 0 auto;
-}
+Justify-content: center;}
 .button {
 Display: inline-block;
 Padding: 15px 30px;
@@ -44,8 +31,7 @@ Transition: background-color 0.3s ease;}
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة </font><p>
-
-<table bgcolor="white" border="3" bordercolor="silver" style="margin: 0 auto;" width="90%" cellspacing="3" cellpadding="5">
+<table bgcolor="white" border="3" bordercolor="silver" align="center" width="90%" cellspacing="3" cellpadding="5">
 <tr>
 <th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
@@ -104,4 +90,5 @@ _______________________________________<p></font>
 <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div><p>
 </body>
+
 </html>
