--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -5,24 +5,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-/* تم تعديل Body لإضافة التوسيط */
+    
 body {
-    text-align: center; 
-}
-
-/* تم تحديث Body في جزء الـ <style> ليكون متوافقًا مع العنصر body */
-/* Body هي تسمية CSS خاطئة، تم تصحيحها إلى body */
-/* تم دمج Body مع التوسيط أعلاه */
-
+text-align: center;}
 .container {text-align: center;}
 H1 {font-size: 24px;
 Margin-bottom: 20px;}
 .buttons-container {
 Display: flex;
 Gap: 20px;
-/* التأكد من توسيط الأزرار أفقيًا */
 Justify-content: center;
-/* إضافة خاصية لضمان توسيط الحاوية نفسها داخل العنصر الأب */
 margin: 0 auto;
 }
 .button {
