--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -89,7 +89,7 @@ _______________________________________<p></font>
 
 </table><p>
 <div class="buttons-container">
-<a href="موقع buyzone.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div><p>
 </body>
 </html>
