--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -2,6 +2,7 @@
 <head>
 <title>الملابس الجاهزة</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 Body
 .container {text-align: center;}
