--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -1,14 +1,10 @@
+حفظ
 <!DOCTYPE html>
 <head>
 <title>الملابس الجاهزة</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-/* لم أغير أي شيء في أكواد الـ CSS الخاصة بك */
-body {
-    text-align: center; /* تطبيق محاذاة النص للوسط على الصفحة بأكملها */
-}
+Body
 .container {text-align: center;}
 H1 {font-size: 24px;
 Margin-bottom: 20px;}
@@ -30,74 +26,71 @@ Transition: background-color 0.3s ease;}
 </style>
 </head>
 <body bgcolor="beige" style="background-image:url('خلفية صفحة الملابس.jpeg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-
-<img src="الشعار بدون خلفية.png" alt="BuyZone" style="max-width: 350px; width: 90%; height: auto;"><br>
+<center><img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
 
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة </font><p>
-
-<table bgcolor="white" border="3" bordercolor="silver" align="center" style="width:95%; max-width: 800px;" cellspacing="3" cellpadding="5">
-<tr>
-<th><a href="صورة 1.html"><img src="صورة 1.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
+<table bgcolor="white" border="3" bordercolor="silver" align="center" width="100%" cellspacing="3" cellpadding="5">
+<center><tr>
+<th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
 وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي</a>
 
 </th>
-<th><a href="صورة 2.html"><img src="صورة 2.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق
+<th><a href="صورة 2.html"><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق
  وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة
 بحذاء رياضي أبيض</a></th>
 </tr>
 <tr>
-<td><center><a href="صورة 3.html"><img src="صورة 3.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني
+<td><center><a href="صورة 3.html"><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني
 وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض</a>
 
 </td>
-<td><center><a href="صورة 4.html"><img src="صورة 4.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">.طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء
+<td><center><a href="صورة 4.html"><IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">.طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء
 مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل
 الطقم بحذاء لوفر أسود</a></td>
 </tr>
 <tr>
-<td><center><a href="صورة 5.html"><img src="صورة 5.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن
+<td><center><a href="صورة 5.html"><IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن
 المائل للأسود، يتألف من قميص بأكمام طويلة
 وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود</a>
 </td>
-<td><center><a href="صورة 6.html"><img src="صورة 6.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني 
+<td><center><a href="صورة 6.html"><IMG SRC="صورة 6.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني 
 مع ياقة بيج وبنطلون بيج فاتح بخصر مرن، ويكمل
 الطقم حذاء رياضي متعدد الألوان (بيج وبني وأخضر)</a></td>
 </tr>
 <tr>
-<td><center><a href="صورة 7.html"><img src="صورة 7.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح
+<td><center><a href="صورة 7.html"><IMG SRC="صورة 7.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح
 .مع قميص داخلي أبيض،وبنطلون أخضر زيتوني داكن
 يكمل الإطلالة حذاء رياضي أبيض</a></td>
-<td><center><a href="صورة 8.html"><img src="صورة 8.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض
+<td><center><a href="صورة 8.html"><IMG SRC="صورة 8.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض
  وبنطلون كحلي داكن، وحذاء رياضي أبيض</a>
 
 </td>
 </tr>
 <tr>
-<td><center><a href="صورة 9.html"><img src="صورة 9.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون 
+<td><center><a href="صورة 9.html"><IMG SRC="صورة 9.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون 
 جينز أبيض، وحذاء رياضي أبيض</a>
 
 </td>
-<td><center><a href="صورة 10.html"><img src="صورة 10.PNG" alt="ملابس جاهزة" style="width:100%; height:auto;"><p>
-<font color="red" SIZE="4" FACE="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو
+<td><center><a href="صورة 10.html"><IMG SRC="صورة 10.PNG" ALT="ملابس جاهزة" align="center"><p>
+<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو
 أخضر فاتح مخطط بخطوط طولية، وبنطلون أسود واسع
 الساق. ويكتمل الطقم بحذاء رياضي أبيض بنعل برتقالي</a></td>
 </tr>
 
 </table><p>
 <div class="buttons-container">
-<a href="موقع index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div><p>
 </body>
-    </html>
-    
+</html>
