--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -31,7 +31,7 @@ Transition: background-color 0.3s ease;}
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة </font><p>
-<table bgcolor="white" border="3" bordercolor="silver" align="center" width="100%" cellspacing="3" cellpadding="5">
+<table bgcolor="white" border="3" bordercolor="silver" align="center" width="400" cellspacing="3" cellpadding="5">
 <center><tr>
 <th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
