--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -1,110 +1,94 @@
 <!DOCTYPE html>
+<html lang="ar">
 <head>
 <title>الملابس الجاهزة</title>
 <meta charset="UTF-8">
 <style>
-Body
-.container {text-align: center;}
-H1 {font-size: 24px;
-Margin-bottom: 20px;}
-.buttons-container {
-Display: flex;
-Gap: 20px;
-Justify-content: center;}
-.button {
-Display: inline-block;
-Padding: 40px 80px;
-Background-color: #FF0000;
-Color: white;
-Text-decoration: none;
-Border-radius: 30px;
-Font-size: 40px;
-Font-weight: bold;
-Transition: background-color 0.3s ease;}
-.button:hover{Background-color: #a97142;}
-
-/* إضافة تنسيق CSS إضافي لضمان عرض صور أكبر وتناسب الأجهزة */
-table img {
-    width: 100%; /* اجعل الصورة تملأ عرض الخلية بالكامل */
-    height: auto;
-    max-width: 250px; /* لضمان ألا تتجاوز حجماً معيناً في الشاشات الكبيرة */
-    display: block; /* للتخلص من أي مسافات زائدة أسفل الصورة */
+body .container {
+  text-align: center;
 }
-table th, table td {
-    vertical-align: top;
-    text-align: center;
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.buttons-container {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.button {
+  display: inline-block;
+  padding: 40px 80px;
+  background-color: #FF0000;
+  color: white;
+  text-decoration: none;
+  border-radius: 30px;
+  font-size: 40px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+.button:hover {
+  background-color: #a97142;
+}
+/* تكبير الجدول ليكون مثل الصورة الثانية */
+table {
+  width: 800px; /* كان 400 */
+  border: 3px solid silver;
+  background-color: white;
+  border-collapse: collapse;
+}
+table img {
+  width: 350px; /* تكبير الصور داخل الجدول */
+  height: auto;
+}
+td, th {
+  padding: 15px; /* جعل المسافات أكبر */
+  text-align: center;
 }
 </style>
 </head>
-<body bgcolor="beige" style="background-image:url('خلفية صفحة الملابس.jpeg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><img src="الشعار بدون خلفية.png" alt="BuyZone" height="400" width="575"><br>
+<body bgcolor="beige" style="background-image:url('خلفية صفحة الملابس.jpeg'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+<center>
+  <img src="الشعار بدون خلفية.png" alt="BuyZone" height="400" width="575"><br>
+  <b><font size="6" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br> _______________________________________<p></font>
+  <font color="black" size="7" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة</font><p>
 
-<b><font SIZE="6" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
-_______________________________________<p></font>
-<font color="black" SIZE="7" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة </font><p>
-<table bgcolor="white" border="3" bordercolor="silver" align="center" width="600" cellspacing="10" cellpadding="5">
-<col width="50%">
-<col width="50%">
-<tr>
-<th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
-وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي</a>
-
-</th>
-<th><a href="صورة 2.html"><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق
- وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة
-بحذاء رياضي أبيض</a></th>
-</tr>
-<tr>
-<td><center><a href="صورة 3.html"><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني
-وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض</a>
-
-</td>
-<td><center><a href="صورة 4.html"><IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">.طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء
-مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل
-الطقم بحذاء لوفر أسود</a></td>
-</tr>
-<tr>
-<td><center><a href="صورة 5.html"><IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن
-المائل للأسود، يتألف من قميص بأكمام طويلة
-وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود</a>
-</td>
-<td><center><a href="صورة 6.html"><IMG SRC="صورة 6.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني 
-مع ياقة بيج وبنطلون بيج فاتح بخصر مرن، ويكمل
-الطقم حذاء رياضي متعدد الألوان (بيج وبني وأخضر)</a></td>
-</tr>
-<tr>
-<td><center><a href="صورة 7.html"><IMG SRC="صورة 7.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح
-.مع قميص داخلي أبيض،وبنطلون أخضر زيتوني داكن
-يكمل الإطلالة حذاء رياضي أبيض</a></td>
-<td><center><a href="صورة 8.html"><IMG SRC="صورة 8.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض
- وبنطلون كحلي داكن، وحذاء رياضي أبيض</a>
-
-</td>
-</tr>
-<tr>
-<td><center><a href="صورة 9.html"><IMG SRC="صورة 9.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون 
-جينز أبيض، وحذاء رياضي أبيض</a>
-
-</td>
-<td><center><a href="صورة 10.html"><IMG SRC="صورة 10.PNG" ALT="ملابس جاهزة" align="center"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو
-أخضر فاتح مخطط بخطوط طولية، وبنطلون أسود واسع
-الساق. ويكتمل الطقم بحذاء رياضي أبيض بنعل برتقالي</a></td>
-</tr>
-
-</table><p>
-<div class="buttons-container">
-<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
-</div><p>
+  <table align="center" cellspacing="3" cellpadding="5">
+    <tr>
+      <th><a href="صورة 1.html"><img src="صورة 1.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي</a></th>
+      <th><a href="صورة 2.html"><img src="صورة 2.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة بحذاء رياضي أبيض</a></th>
+    </tr>
+    <tr>
+      <td><a href="صورة 3.html"><img src="صورة 3.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض</a></td>
+      <td><a href="صورة 4.html"><img src="صورة 4.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل الطقم بحذاء لوفر أسود</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 5.html"><img src="صورة 5.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن المائل للأسود، يتألف من قميص بأكمام طويلة وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود</a></td>
+      <td><a href="صورة 6.html"><img src="صورة 6.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني مع ياقة بيج وبنطلون بيج فاتح بخصر مرن، ويكمل الطقم حذاء رياضي متعدد الألوان (بيج وبني وأخضر)</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 7.html"><img src="صورة 7.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح .مع قميص داخلي أبيض،وبنطلون أخضر زيتوني داكن يكمل الإطلالة حذاء رياضي أبيض</a></td>
+      <td><a href="صورة 8.html"><img src="صورة 8.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض وبنطلون كحلي داكن، وحذاء رياضي أبيض</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 9.html"><img src="صورة 9.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون جينز أبيض، وحذاء رياضي أبيض</a></td>
+      <td><a href="صورة 10.html"><img src="صورة 10.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو أخضر فاتح مخطط بخطوط طولية، وبنطلون أسود واسع الساق. ويكتمل الطقم بحذاء رياضي أبيض بنعل برتقالي</a></td>
+    </tr>
+  </table>
+  <p>
+  <div class="buttons-container">
+    <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+  </div>
+</center>
 </body>
 </html>
- 
