--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -12,13 +12,6 @@ body {
     background-size: cover;
     background-position: center center;
 }
-/* تنسيق شعار الموقع */
-.logo {
-    height: 200px;
-    width: 280px;
-    display: block;
-    margin: 0 auto;
-}
 
 /* تنسيق النص الترحيبي */
 .welcome-slogan {
@@ -174,8 +167,7 @@ body {
 </style>
 </head>
 <body>
-
-<img src="الشعار بدون خلفية.png" alt="BuyZone" class="logo">
+<img src="الشعار بدون خلفية.png" alt="BuyZone" height="400" weidh="575">
 
 <span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span>
 <hr style="width: 30%; border: 1px solid darkorange; margin-top: -10px;">
@@ -240,4 +232,5 @@ body {
 </div>
 </body>
 </html>
+
 
