--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -170,7 +170,7 @@ body {
 <img src="الشعار بدون خلفية.png" alt="BuyZone" height="200" weidh="275">
 <b>
 <span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span>
-
+____________________________
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
 
 <table class="product-card">
@@ -181,7 +181,7 @@ body {
     </th>
     <th>
         <a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية"></a>
-        <span class="product-description">خلاطة عصائر "سوناي" حجم كبير درجة أولى خلاطة بهارات + قنينة ماء مجاناً +</span>
+        <span class="product-description">خلاطة عصائر "سوناي" حجم كبير درجة أولى + خلاطة بهارات + قنينة ماء مجاناً </span>
     </th>
 </tr>
 <tr>
@@ -231,6 +231,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
