--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -156,7 +156,7 @@ body {
     }
     
     .page-title {
-        font-size: 25px; 
+        font-size: 22px; 
     }
     
     .logo {
@@ -168,8 +168,8 @@ body {
 </head>
 <body>
 <img src="الشعار بدون خلفية.png" alt="BuyZone" height="200" weidh="275">
-<b>
-<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>________________________________</span>
+<b><hr color="darkorange">
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span></hr></b>
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
 
 <table class="product-card">
@@ -230,6 +230,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
