--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -168,8 +168,8 @@ body {
 </head>
 <body>
 <img src="الشعار بدون خلفية.png" alt="BuyZone" height="200" weidh="275">
-<b><hr color="darkorange">
-<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span></hr></b>
+<b><u>
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج</span></u></b>
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
 
 <table class="product-card">
@@ -230,6 +230,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
