--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -169,7 +169,7 @@ body {
 <body>
 <img src="الشعار بدون خلفية.png" alt="BuyZone" height="200" weidh="275">
 <b>
-<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>________</span></b>
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>_______________________________</span></b>
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
 
 <table class="product-card">
@@ -230,6 +230,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
