--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -169,9 +169,9 @@ body {
 <body>
 <img src="الشعار بدون خلفية.png" alt="BuyZone" height="200" weidh="275">
 <b>
-<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>_______________________________</span></b>
+<span class="welcome-slogan">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br>__________________________________</span>
 <span class="page-title">مرحباً بكم في صفحة الاجهزة الكهربائية</span>
-
+</b>
 <table class="product-card">
 <tr>
     <th>
@@ -230,6 +230,7 @@ body {
 </div>
 </body>
 </html>
+
 
 
 
