--- a/صفحة المشرفين.html
+++ b/صفحة المشرفين.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<html lang="ar">
 <head>
-    <title>صفحة المشرفين</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <style>
+<title>الملابس الجاهزة</title>
+<meta charset="UTF-8">
+<style>
 body .container {
   text-align: center;
 }
@@ -30,70 +30,65 @@ h1 {
 .button:hover {
   background-color: #a97142;
 }
-
-/* التعديل هنا */
+/* تكبير الجدول ليكون مثل الصورة الثانية */
 table {
-  width: 96%;            /* <-- أخذ 96% من عرض الصفحة */
+  width: 800px; /* كان 400 */
   border: 3px solid silver;
   background-color: white;
   border-collapse: collapse;
 }
-
-/* تكبير الصور داخل الجدول */
 table img {
-  width: 350px;
+  width: 350px; /* تكبير الصور داخل الجدول */
   height: auto;
 }
-
-/* تكبير الخط داخل الجدول */
 td, th {
-  padding: 20px;
+  padding: 15px; /* جعل المسافات أكبر */
   text-align: center;
-  font-size: 26px;       /* <-- الخط أصبح أكبر */
-  font-weight: bold;
 }
 </style>
-
 </head>
+<body bgcolor="beige" style="background-image:url('خلفية صفحة الملابس.jpeg'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+<center>
+  <img src="الشعار بدون خلفية.png" alt="BuyZone" height="400" width="575"><br>
+  <b><font size="6" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج<br> _______________________________________<p></font>
+  <font color="black" size="7" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة</font><p>
 
-<body>
-    <div class="page-content"> 
-        <img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350">
-        <h1 class="page-title">مرحباً بكم في صفحة المشرفين</h1>
-        
-        <table>
-            <tr>
-                <th>ارقام التواصل</th>
-                <th>التخصص</th>
-                <th>الاسم</th>
-            </tr>
-            <tr>
-                <td>775328516</td>
-                <td>BIM</td>
-                <td>عبدالله ناظم فضل</td>
-            </tr>
-            <tr>
-                <td>773127831</td>
-                <td>BIM</td>
-                <td>احمد مصطفى عبدالرحمن</td>
-            </tr>
-            <tr>
-                <td>770784994</td>
-                <td>BIM</td>
-                <td>محمد عمار محمد</td>
-            </tr>
-            <tr>
-                <td>778592018</td>
-                <td>BIM</td>
-                <td>عمر عمار محمد</td>
-            </tr>
-        </table>
-
-        <div class="buttons-container">
-            <a href="index.html" class="button">العودة</a>
-        </div>
-    </div>
+  <table align="center" cellspacing="3" cellpadding="5">
+    <tr>
+      <th><a href="صورة 1.html"><img src="صورة 1.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي</a></th>
+      <th><a href="صورة 2.html"><img src="صورة 2.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة بحذاء رياضي أبيض</a></th>
+    </tr>
+    <tr>
+      <td><a href="صورة 3.html"><img src="صورة 3.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض</a></td>
+      <td><a href="صورة 4.html"><img src="صورة 4.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل الطقم بحذاء لوفر أسود</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 5.html"><img src="صورة 5.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن المائل للأسود، يتألف من قميص بأكمام طويلة وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود</a></td>
+      <td><a href="صورة 6.html"><img src="صورة 6.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني مع ياقة بيج وبنطلون بيج فاتح بخصر مرن، ويكمل الطقم حذاء رياضي متعدد الألوان (بيج وبني وأخضر)</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 7.html"><img src="صورة 7.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح .مع قميص داخلي أبيض،وبنطلون أخضر زيتوني داكن يكمل الإطلالة حذاء رياضي أبيض</a></td>
+      <td><a href="صورة 8.html"><img src="صورة 8.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض وبنطلون كحلي داكن، وحذاء رياضي أبيض</a></td>
+    </tr>
+    <tr>
+      <td><a href="صورة 9.html"><img src="صورة 9.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون جينز أبيض، وحذاء رياضي أبيض</a></td>
+      <td><a href="صورة 10.html"><img src="صورة 10.PNG" alt="ملابس جاهزة"><p>
+      <font color="red" size="4" face="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو أخضر فاتح مخطط بخطوط طولية، وبنطلون أسود واسع الساق. ويكتمل الطقم بحذاء رياضي أبيض بنعل برتقالي</a></td>
+    </tr>
+  </table>
+  <p>
+  <div class="buttons-container">
+    <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+  </div>
+</center>
 </body>
-
 </html>
-
