--- a/صفحة المشرفين.html
+++ b/صفحة المشرفين.html
@@ -30,15 +30,16 @@
 
         /* 2. تنسيق الشعار (تصغيره قليلاً) */
         img {
-            max-width: 90%; 
+            max-width: 90%; /* تم تصغيره قليلاً من 100% */
             height: auto;
             margin-bottom: 10px;
+            /* يمكن أيضاً التحكم في حجمه عن طريق الارتفاع الأقصى */
             max-height: 220px; 
         }
 
         /* 3. تنسيق العنوان الترحيبي (تصغيره قليلاً) */
         .page-title {
-            font-size: 2.7em; 
+            font-size: 2.5em; /* تم تصغيره قليلاً من 3em */
             color: white;
             font-family: 'DecoType Naskh Variants', Arial, sans-serif; 
             margin-top: 0;
@@ -46,27 +47,27 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
 
-        /* 4. تنسيق الجدول (عرض 98%) */
+        /* 4. تنسيق الجدول (عرض 96%) */
         table {
-            width: 98%; /* **تم تعديل العرض ليصبح 98%** */
-            max-width: 900px; /* زيادة أقصى عرض للجدول ليناسب الـ 98% */
+            width: 96%; /* **تم تعديل العرض ليصبح 96%** */
+            max-width: 850px; /* زيادة بسيطة في أقصى عرض للجدول */
             border-collapse: collapse;
             margin: 20px auto;
             background-color: white;
         }
 
-        /* 5. تنسيق خلايا الجدول (تكبير حجم الخط) */
+        /* 5. تنسيق خلايا الجدول (تكبير حجم الخط قليلاً) */
         th, td {
-            padding: 14px 8px; /* زيادة في المساحة الداخلية */
+            padding: 12px 7px; /* زيادة بسيطة في المساحة الداخلية */
             border: 3px solid silver;
             text-align: center;
-            font-size: 1.5em; /* **تم تكبير حجم الخط من 1.35em إلى 1.5em** */
+            font-size: 1.35em; /* **تم تكبير حجم الخط قليلاً من 1.2em** */
         }
 
         th {
             background-color: #f0f0f0;
             color: blue;
-            font-size: 1.6em; /* تكبير بسيط لخط العناوين */
+            font-size: 1.55em; /* تكبير بسيط لخط العناوين */
         }
 
         /* 6. تنسيق زر العودة (تصغيره قليلاً) */
@@ -79,12 +80,12 @@
 
         .button {
             display: inline-block;
-            padding: 12px 25px; 
+            padding: 12px 25px; /* **تم تصغير padding لتقليل حجم الزر** */
             background-color: #1e90ff;
             color: white;
             text-decoration: none;
             border-radius: 10px;
-            font-size: 22px; 
+            font-size: 22px; /* **تم تصغير حجم خط الزر قليلاً من 25px** */
             font-weight: bold;
             transition: background-color 0.3s ease;
             white-space: nowrap;
@@ -102,7 +103,7 @@
             }
 
             th, td {
-                font-size: 1.2em; /* تعديل حجم الخط على الجوال ليتناسب مع التكبير الجديد */
+                font-size: 1.1em; /* تعديل حجم الخط على الجوال ليتناسب مع التكبير الجديد */
                 padding: 8px 3px;
             }
             
