--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
         /* حاوية المحتوى لتركيزه */
         .main-container {
-            max-width: 1200px;
+            /* تم توسيع العرض إلى 98% */
+            width: 98%; 
             margin: 0 auto;
             /* تم زيادة التعبئة */
             padding: 30px; 
-            /* تم زيادة الشفافية (0.7) */
-            background-color: rgba(255, 255, 255, 0.7); 
+            /* تم زيادة الشفافية (0.5) */
+            background-color: rgba(255, 255, 255, 0.5); 
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
