--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 
         /* حاوية المحتوى لتركيزه */
         .main-container {
-            /* تم توسيع العرض إلى 98% */
-            width: 98%; 
+            /* تم تعديل العرض إلى 90% */
+            width: 90%; 
             margin: 0 auto;
-            /* تم زيادة التعبئة */
             padding: 30px; 
-            /* تم زيادة الشفافية (0.5) */
             background-color: rgba(255, 255, 255, 0.5); 
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
