--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
         /* حاوية المحتوى لتركيزه */
         .main-container {
-            /* تم تعديل العرض إلى 90% */
+            /* العرض 90% */
             width: 90%; 
-            margin: 0 auto;
+            /* التوسيط في منتصف الصفحة أفقياً */
+            margin: 0 auto; 
             padding: 30px; 
             background-color: rgba(255, 255, 255, 0.5); 
             border-radius: 10px;
