--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -6,7 +6,7 @@
 <style>
 body {
     text-align: center;
-    background-color: #FF0000;
+    background-color: beige;
     background-image: url('خلفية صفحة الملابس.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
